# APC_Project_Package

./: README.md  pyproject.toml
src/golden_fred/: factors_fred  fred_backtest.py  fred_covariance.py  fred_factors  fred_factors.py  fred_regression.py  get_fred.py
tests/: test_backtest.py  test_basic.py  test_covariance.py  test_data.py  test_factors.py  test_fred_regression.py
