[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "golden_fred"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "statsmodels",
    "parameterized"
]
[project.optional-dependencies]
test = ["pytest"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error","ignore::UserWarning"]
testpaths = ["tests"]
